syntax = "proto3";

option csharp_namespace = "GrpcDemoService";

package streamDemo;

service StreamDemo {
  rpc ServerStreamDemo(Test) returns (stream Test);
  rpc ClientStreamDemo(stream Test) returns (Test);
  rpc BidirectionStreamDemo(stream Test) returns (stream Test);
}

message Test {
  string message = 1;
}
